--- a/fix.adoc
+++ b/fix.adoc
@@ -68,12 +68,12 @@ I think this is better demonstrated with an example.
 
 include::fix-string.adoc[]
 include::fix-bool.adoc[]
-// TODO: injecting behavior into boolean
-// TODO: callbacks and interfaces (even for functional options)
+include::fix-callback.adoc[]
 // TODO: closures and objects
 
+// TODO: maybe map should be right after string.
 include::fix-map.adoc[]
-include::fix-return-iface.adoc[]
+include::fix-premature-iface.adoc[]
 include::fix-big-iface.adoc[]
 include::fix-serialized-types.adoc[]
 include::fix-global.adoc[]
