--- a/fix-string.adoc
+++ b/fix-string.adoc
@@ -157,19 +157,8 @@ Going back to the example:
 
 [.column]
 --
-[source%linenums.small,go,data-id=dont]
+[source%linenums.medium,go,data-id=dont]
 ----
-func isHTTP(addr string) bool {
-  ok := strings.HasPrefix(addr, "http://")
-  ok ||= strings.HasPrefix(addr, "https://")
-  return ok
-}
-
-func isSSH(addr string) bool {
-  ok := strings.HasPrefix(addr, "ssh://")
-  return ok
-}
-
 func download(addr string) {
    if isHTTP(addr) {
       http.Get(addr)
@@ -180,17 +169,47 @@ func download(addr string) {
    }
    /* ... */
 }
-
-func sshDownload(addr string) {
-   addr = strings.TrimPrefix(addr, "ssh://")
-   /* ... */
-}
 ----
 --
 
 [.column%step]
 --
-[source%linenums.small,go,data-id=do]
+[source%linenums.medium,go,data-id=do]
+----
+func download(addrs string) {
+   addr, err := url.Parse(addrs)
+   if err != nil {
+      log.Panic(err)
+   }
+   if isHTTP(addr) {
+      http.Get(addrs)
+   } else if isSSH(addr) {
+      sshDownload(addr)
+   } else {
+     log.Panic("unsupported:", addr)
+   }
+   /* ... */
+}
+----
+--
+
+[.notes]
+--
+I should forget that `addr` is a string as early as I can.
+I can use `net/url.Parse` here... (*step*)
+
+That's better.
+I convert the string into a richer representation at the entry point,
+and then I use that same information everywhere.
+I should also update my helper functions to run on URLs...
+--
+
+[%auto-animate.columns]
+== String typing
+
+[.column]
+--
+[source%linenums.medium,go,data-id=helpers]
 ----
 func isHTTP(addr *url.URL) bool {
   ok := addr.Scheme == "http"
@@ -203,61 +222,23 @@ func isSSH(addr *url.URL) bool {
   return ok
 }
 
-func download(addr string) {
-   u, err := url.Parse(addr)
-   if err != nil {
-      log.Panic(err)
-   }
-   if isHTTP(u) {
-      httpGet(u)
-   } else if isSSH(u) {
-      sshDownload(u)
-   } else {
-     log.Panic("unsupported:", addr)
-   }
-   /* ... */
-}
-
 func sshDownload(addr *url.URL) {
    /* ... */
 }
 ----
 --
 
-[.notes]
---
-I should forget that `addr` is a string as early as I can.
-I can use `net/url.Parse` here... (*step*)
-
-That's better.
-I convert the string into a richer representation once,
-and then I use that same information everywhere.
-
-At this point, it's also worth questioning
-why `isHTTP` and `isSSH` even need to exist...
---
-
-[%auto-animate.columns]
-== String typing
-
 [.column]
 --
-[source%linenums.small,go,data-id=dont]
+[source%linenums.medium,go,data-id=do]
 ----
-func isHTTP(addr string) bool {
-  ok := strings.HasPrefix(addr, "http://")
-  ok ||= strings.HasPrefix(addr, "https://")
-  return ok
-}
-
-func isSSH(addr string) bool {
-  ok := strings.HasPrefix(addr, "ssh://")
-  return ok
-}
-
-func download(addr string) {
+func download(addrs string) {
+   addr, err := url.Parse(addrs)
+   if err != nil {
+      log.Panic(err)
+   }
    if isHTTP(addr) {
-      http.Get(addr)
+      http.Get(addrs)
    } else if isSSH(addr) {
       sshDownload(addr)
    } else {
@@ -265,9 +246,29 @@ func download(addr string) {
    }
    /* ... */
 }
+----
+--
 
-func sshDownload(addr string) {
-   addr = strings.TrimPrefix(addr, "ssh://")
+
+[.notes]
+--
+At this point, it's also worth questioning
+why `isHTTP` and `isSSH` even need to exist.
+We can just inspect the URL scheme inline.
+--
+
+[%auto-animate.columns]
+== String typing
+
+[.column]
+--
+[source%linenums.medium,go,data-id=helpers]
+----
+func httpGet(addr *url.URL) {
+   /* ... */
+}
+
+func sshDownload(addr *url.URL) {
    /* ... */
 }
 ----
@@ -275,25 +276,21 @@ func sshDownload(addr string) {
 
 [.column]
 --
-[source%linenums.small,go,data-id=do]
+[source%linenums.medium,go,data-id=do]
 ----
-func download(addr string) {
-   u, err := url.Parse(addr)
+func download(addrs string) {
+   addr, err := url.Parse(addrs)
    if err != nil {
       log.Panic(err)
    }
-   switch u.Scheme {
+   switch addr.Scheme {
    case "http", "https":
-      httpGet(u)
+      httpGet(addr)
    case "ssh":
-      sshDownload(u)
+      sshDownload(addr)
    default:
      log.Panic("unsupported:", addr)
    }
-   /* ... */
-}
-
-func sshDownload(addr *url.URL) {
    /* ... */
 }
 ----
