--- a/fix-premature-iface.adoc
+++ b/fix-premature-iface.adoc
@@ -1,4 +1,6 @@
-= Returning premature interfaces
+= Premature interfaces
+
+// TODO: Technically already covered with accept interfaces
 
 // TODO: better title
 
